# dbx-ucm-productivizacion

./: .gitignore  ML_Lab_2_Training_with_Pandas_UDF.py  ML_Lab_MLflow_Databricks.py  README.md  airbnb.csv  mlflow.db  pyproject.toml
airflow_project/: Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements.txt
airflow_project/airflow_metadata/: airflow.db
airflow_project/config/: config.yaml  variables.json
airflow_project/dags/: airflow_ml_pipeline.py  airflow_ml_pipeline_final.py  test_pipeline.py
airflow_project/mlflow_metadata/: mlflow.db
databricks_project/: DBFS_Example.py  README.md  pyproject.toml
notebooks_clase/: 00_setup_entorno_uv.ipynb  pyproject.toml
notebooks_clase/tema_2_microservicios/: chapter-2-1-swagger.ipynb  chapter-2-2-anexo-flask.ipynb  chapter-2-3-model-serialization.ipynb  chapter-2-guia-instalacion.ipynb  chapter-2-micros-fastapi.ipynb
notebooks_clase/tema_3_mlflow/: chapter-3-1-mlflow-tracking.ipynb  chapter-3-2-1-model-metrics-classic.ipynb  chapter-3-2-mlflow-experiments.ipynb  chapter-3-3-mlflow-models.ipynb  chapter-3-4-model-registry.ipynb  chapter-3-5-model-serving.ipynb  chapter-3-7-contenerizacion.ipynb  chapter-3-mlflow.ipynb  mlflow.db
notebooks_clase/tema_3_mlflow/mlruns/1/0f04fa90a063451688ed1223c90cbaab/artifacts/: estimator.html
notebooks_clase/tema_3_mlflow/mlruns/1/136848c974de45a2aea3d5f44a51a24e/artifacts/: estimator.html
notebooks_clase/tema_3_mlflow/mlruns/1/148f2852ce4848dfa9ca3f6094562878/artifacts/: estimator.html
notebooks_clase/tema_3_mlflow/mlruns/1/1b9ab2f78a3e4fb3a606bb4dd3909844/artifacts/: estimator.html
notebooks_clase/tema_3_mlflow/mlruns/1/2d713bb146444b29b39c60c80eb8dc2f/artifacts/: estimator.html
notebooks_clase/tema_3_mlflow/mlruns/1/2e1431bc7562499e8479028431b1e704/artifacts/: feature_importance_weight.json
notebooks_clase/tema_3_mlflow/mlruns/1/33b71987af444154876019a44812d14c/artifacts/: estimator.html
notebooks_clase/tema_3_mlflow/mlruns/1/56cc9fec703b4ce6b8eb46b0e7914804/artifacts/: estimator.html
notebooks_clase/tema_3_mlflow/mlruns/1/59a9fa51f1a44a33be6898e3c0c6cf4c/artifacts/: estimator.html
notebooks_clase/tema_3_mlflow/mlruns/1/6133c8e45ac843078cae983862e7e8cf/artifacts/: estimator.html
notebooks_clase/tema_3_mlflow/mlruns/1/620683e7ca224fb8bc57f9965735fd9a/artifacts/: estimator.html
notebooks_clase/tema_3_mlflow/mlruns/1/62af8b317e264f6db73a12680d769555/artifacts/: estimator.html
notebooks_clase/tema_3_mlflow/mlruns/1/6faad29f82a7481da2b7f8aef815e5d0/artifacts/: estimator.html
notebooks_clase/tema_3_mlflow/mlruns/1/75d9a1ef9b5b48aca06116974dad3448/artifacts/: estimator.html
notebooks_clase/tema_3_mlflow/mlruns/1/778edec14f4846aabedbc50cf9973439/artifacts/: estimator.html
notebooks_clase/tema_3_mlflow/mlruns/1/7ad3cefd1c1a4aeab47f558f95683fbd/artifacts/: estimator.html
notebooks_clase/tema_3_mlflow/mlruns/1/7c989522b26c4616a2d73a5d5ed4024a/artifacts/: estimator.html
notebooks_clase/tema_3_mlflow/mlruns/1/8412acd62a6845ae901cc349a252e5cc/artifacts/: estimator.html
notebooks_clase/tema_3_mlflow/mlruns/1/9f71eee34d9048ac83a69b4b2d2e3274/artifacts/: estimator.html
notebooks_clase/tema_3_mlflow/mlruns/1/9fc985df1e5d4149b4f123c943246347/artifacts/: estimator.html
notebooks_clase/tema_3_mlflow/mlruns/1/ab58c722f92c4708b97265b86044e97e/artifacts/: estimator.html
telegram_project/: .env_template  Ejercicio.md  ejemplo_finalizado.py  evaluate_prompts.py  laboratorio_productivizacion_2024_2025.ipynb  mlflow_azure.py  pyproject.toml  simple_run_ucm_exercise.py  simple_run_ucm_exercise_copy.py
(+138 files in other folders)
