[project]
name = "notebooks-clase"
version = "0.1.0"
description = "Notebooks Clase ucm"
requires-python = ">=3.11,<3.12"
authors = [
  { name = "pdhidalgo", email = "pdhidalgo198@gmail.com" },
]
dependencies = [
  "seaborn>=0.13.2,<0.14.0",
  "pandas>=2.2.3,<3.0.0",
  "ipykernel>=6.29.5,<7.0.0",
  "scikit-learn>=1.6.1,<2.0.0",
  "pydantic>=2.11.3,<3.0.0",
  "fastapi>=0.115.12,<0.116.0",
  "uvicorn>=0.34.1,<0.35.0",
  "requests>=2.32.3,<3.0.0",
  "mlflow>=3.11",
  "xgboost>=2.0.0,<3.0.0",
  "matplotlib>=3.10.1,<4.0.0",
  "jupyter-book>=1.0.4.post1,<2.0.0",
  "sphinxcontrib-mermaid>=2.0.0,<3.0.0",
  "jupyterlab>=4.5.7",
  "jupyterlab-myst>=2.6.0",
  "numpy>=1.26,<2.0",
]

[dependency-groups]
dev = [
  "pytest",
  "ruff",
  "bandit",
  "pip-audit",
]

[tool.uv]
package = false

[tool.setuptools.packages.find]
where = ["."]
include = [
    "cml_project*",
    "airflow_project*",
    "telegram_project*",
    "databricks_project*"
]
exclude = [
    "notebooks_clase*"
]